# airbyte

airbyte-cdk/bulk/core/load/src/integrationTest/kotlin/io/airbyte/cdk/load/mock_integration_test/: MockBasicFunctionalityIntegrationTest.kt  MockDestinationBackend.kt
airbyte-cdk/bulk/core/load/src/testFixtures/kotlin/io/airbyte/cdk/load/test/util/: IntegrationTest.kt
airbyte-ci/connectors/pipelines/pipelines/airbyte_ci/connectors/build_image/steps/: build_customization.py  manifest_only_connectors.py
airbyte-ci/connectors/pipelines/pipelines/airbyte_ci/connectors/test/steps/: manifest_only_connectors.py
airbyte-integrations/connectors/destination-iceberg-v2/: metadata.yaml
airbyte-integrations/connectors/source-intercom/: manifest.yaml  metadata.yaml
airbyte-integrations/connectors/source-jira/: pyproject.toml
airbyte-integrations/connectors/source-mysql/src/main/kotlin/io/airbyte/integrations/source/mysql/: MySqlSourceConfiguration.kt  MySqlSourceConfigurationSpecification.kt  MySqlSourceDebeziumOperations.kt
airbyte-integrations/connectors/source-mysql/src/test/kotlin/io/airbyte/integrations/source/mysql/: MySqlSourceConfigurationSpecificationTest.kt
airbyte-integrations/connectors/source-mysql/src/test/resources/: expected-spec.json
airbyte-integrations/connectors/source-pokeapi/: metadata.yaml
airbyte-integrations/connectors/source-the-guardian-api/: metadata.yaml
airbyte-integrations/connectors/source-the-guardian-api/unit_tests/: conftest.py  pyproject.toml  test_component.py  test_paginator.py
docs/integrations/sources/: jira.md
(+4 files in other folders)
