[tool.poetry]
name = "connector-unit-tests"
version = "0.1.0"
description = "Unit tests for the connector"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
airbyte-cdk = "6.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.6.1"
# Add other testing dependencies as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
